idea/testData/multiModuleHighlighting/platform1/jvm/jvm.kt
<error descr="[IMPLEMENTATION_WITHOUT_HEADER] Modifier 'impl' is only applicable to members that are initially declared in platform-independent code">impl</error> class Your {

}

header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] Header declaration 'His' has no implementation in module for JVM">His</error> {

}

header class Their {

}

impl class Their {

}